<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HeroCraft24</string>

    <!-- Bottom Navigation -->
    <string name="tab_characters">Персонажи</string>
    <string name="tab_spells">Заклинания</string>
    <string name="tab_equipment">Снаряжение</string>
    <string name="tab_reference">Справочник</string>
    <string name="tab_settings">Настройки</string>

    <string name="press_back_again_to_exit">Нажмите «назад» ещё раз, чтобы выйти</string>
</resources>