<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_characters"
        android:icon="@drawable/ic_person"
        android:title="@string/tab_characters" />
    <item
        android:id="@+id/navigation_spells"
        android:icon="@drawable/ic_spells"
        android:title="@string/tab_spells" />
    <item
        android:id="@+id/navigation_equipment"
        android:icon="@drawable/ic_backpack"
        android:title="@string/tab_equipment" />
    <item
        android:id="@+id/navigation_reference"
        android:icon="@drawable/ic_menu_book"
        android:title="@string/tab_reference" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/tab_settings" />
</menu>